--- a/public/index.html
+++ b/public/index.html
@@ -33,27 +33,8 @@
       href="assets/css/icofont.css"
       media="all"
     />
-    <!-- Slick CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/slick.css" /> -->
-
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-    <!-- Owl carousel CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.css" /> -->
-    <!-- Popup CSS -->
-    <!-- <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/magnific-popup.css"
-    /> -->
-    <!-- Switcher CSS -->
-    <!-- <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/switcher-style.css"
-    /> -->
-    <!-- Animate CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/animate.min.css" /> -->
-    <!-- Main style CSS -->
+
     <link
       rel="stylesheet"
       type="text/css"
@@ -71,8 +52,12 @@
     <link rel="icon" type="image/png" href="assets/img/favcion.png" />
 
     <!-- Google Fonts -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
     <!--
