--- a/public/index.html
+++ b/public/index.html
@@ -17,44 +17,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/bootstrap.min.css"
-      media="all"
-    />
-    <!-- Slick nav CSS -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/slicknav.min.css"
-      media="all"
-    />
-    <!-- Iconfont CSS -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/icofont.css"
-      media="all"
-    />
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/style.css"
-      media="all"
-    />
-    <!-- Responsive CSS -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/responsive.css"
-      media="all"
-    />
     <!-- Favicon Icon -->
-    <link rel="icon" type="image/png" href="assets/img/favcion.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favcion.png" />
 
     <!-- Google Fonts -->
     <!-- <link
