--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Favicon Icon -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favcion.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/android-chrome-192x192.png"
+    />
 
     <!-- Google Fonts -->
     <!-- <link
