--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#006600" />
     <meta name="description" content="A road safety app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -59,5 +60,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="%PUBLIC_URL%/responseSocket.js"></script>
   </body>
 </html>
